# Data_Structures_and_Algorithms

./: CMakeLists.txt  main.cpp
BinaryTree/: BinaryTree.cpp  BinaryTree.h  TreeNode.cpp  TreeNode.h
Structures/: INode.h  ISearchableStructure.h  ISortable.h  ISortableStructure.h  IStructure.h
Structures/BinaryTree/: BinaryTree.cpp  BinaryTree.h  IBinaryTree.h  ITreeNode.h  TreeNode.cpp  TreeNode.h
Structures/Exceptions/: NodeAlreadyExistsException.cpp  NodeAlreadyExistsException.h
Structures/LinkedList/: ILinkedList.h  IListNode.h  LinkedList.cpp  LinkedList.h  ListNode.cpp  ListNode.h
Structures/Map/: IMap.h  IPair.h  Map.cpp  Map.h  Pair.cpp  Pair.h
Structures/Queue/: IQueue.h  Queue.cpp  Queue.h
Structures/Set/: ISet.h  Set.cpp  Set.h
Structures/Stack/: IStack.h  Stack.cpp  Stack.h
Strutures/: INode.h  IStructure.h
Strutures/BinaryTree/: BinaryTree.cpp  BinaryTree.h  TreeNode.cpp  TreeNode.h
Strutures/BinaryTree/Exceptions/: NodeAlreadyExistsException.cpp  NodeAlreadyExistsException.h
Strutures/ExceptionInterfaces/: IAlredyExistsEXception.h
Strutures/LinkedList/: LinkedList.h
